# watch

./: db.sqlite3  pyproject.toml
django_project/: settings.py  urls.py
ecommerce/: admin.py  forms.py  models.py  urls.py  views.py
ecommerce/management/commands/: addw.py
ecommerce/migrations/: 0001_initial.py
management/commands/: add_watch.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/ecommerce/: about.html  cart.html  checkout.html  collections.html  contact.html  home.html  order_confirmation.html  watch_detail.html
