[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
packages = [
    { include = "django_project" },
    { include = "ecommerce" }
]
[tool.poetry.dependencies]
Django = "^4.2"
python = "^3.9.21"
pillow = "^11.2.1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
